[gd_scene load_steps=48 format=3 uid="uid://bsnc521d2nh8w"]

[ext_resource type="Script" path="res://Player/PlayerController.gd" id="1_qr6y8"]
[ext_resource type="Texture2D" uid="uid://bwdh5svnwh4p2" path="res://Player/player.png" id="2_mo73m"]
[ext_resource type="Script" path="res://Player/PlantDetector.gd" id="3_2jppj"]
[ext_resource type="Texture2D" uid="uid://brudjqxgo2gwh" path="res://Player/cursor.png" id="4_p4vmt"]
[ext_resource type="Script" path="res://Player/HPController.gd" id="5_4icno"]
[ext_resource type="Script" path="res://Player/DepositDetector.gd" id="5_cfsoy"]
[ext_resource type="Texture2D" uid="uid://0ul3qkkbka0u" path="res://Plants/plants-picked.png" id="5_l6csa"]
[ext_resource type="Script" path="res://Player/HeldPlant.gd" id="6_j3u13"]
[ext_resource type="Script" path="res://Player/Hurtbox.gd" id="6_kjd3u"]
[ext_resource type="PackedScene" uid="uid://bdyq0uvrhmxoj" path="res://HUD/hud.tscn" id="10_5beym"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fpdfv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_41hwx"]
atlas = ExtResource("2_mo73m")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfumq"]
atlas = ExtResource("2_mo73m")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sybn6"]
atlas = ExtResource("2_mo73m")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_bipqo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_41hwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfumq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sybn6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8jg5m"]
atlas = ExtResource("2_mo73m")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pdbn"]
atlas = ExtResource("2_mo73m")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxtna"]
atlas = ExtResource("2_mo73m")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qi1bm"]
atlas = ExtResource("2_mo73m")
region = Rect2(96, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ofgof"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jg5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pdbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxtna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qi1bm")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_qhl7a"]
atlas = ExtResource("2_mo73m")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iaukx"]
atlas = ExtResource("2_mo73m")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohm8k"]
atlas = ExtResource("2_mo73m")
region = Rect2(96, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_s2xa2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhl7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iaukx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohm8k")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_miyby"]
atlas = ExtResource("5_l6csa")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fc5gt"]
atlas = ExtResource("5_l6csa")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f7jh"]
atlas = ExtResource("5_l6csa")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vrhg"]
atlas = ExtResource("5_l6csa")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hj6xv"]
atlas = ExtResource("5_l6csa")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cme5g"]
atlas = ExtResource("5_l6csa")
region = Rect2(64, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_a4k3i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_miyby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fc5gt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f7jh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vrhg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj6xv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cme5g")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_yj2t2"]
resource_name = "Idle"
length = 0.05
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Eyes:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Arms:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_mwb8e"]
resource_name = "IdleHold"
length = 0.05
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Eyes:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Arms:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 3]
}

[sub_resource type="Animation" id="Animation_vdaqq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Eyes:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Arms:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_xox0w"]
resource_name = "Run"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Eyes:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Arms:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="Animation" id="Animation_lgklu"]
resource_name = "RunHold"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Eyes:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Arms:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gkr3p"]
_data = {
"Idle": SubResource("Animation_yj2t2"),
"IdleHold": SubResource("Animation_mwb8e"),
"RESET": SubResource("Animation_vdaqq"),
"Run": SubResource("Animation_xox0w"),
"RunHold": SubResource("Animation_lgklu")
}

[sub_resource type="Animation" id="Animation_2pyh1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Arms:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Eyes:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jig8c"]
resource_name = "iframes"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Arms:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Eyes:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_titcc"]
_data = {
"RESET": SubResource("Animation_2pyh1"),
"iframes": SubResource("Animation_jig8c")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_5ckf5"]
radius = 7.0

[sub_resource type="AtlasTexture" id="AtlasTexture_y8t8n"]
atlas = ExtResource("4_p4vmt")
region = Rect2(0, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8354"]
atlas = ExtResource("4_p4vmt")
region = Rect2(18, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_t245q"]
atlas = ExtResource("4_p4vmt")
region = Rect2(36, 0, 18, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_mgmd7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8t8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8354")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t245q")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vxn4d"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hfjxq"]
radius = 44.0454

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 1
collision_layer = 0
script = ExtResource("1_qr6y8")
move_speed = 200

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_fpdfv")

[node name="Body" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_bipqo")
frame = 1

[node name="Arms" type="AnimatedSprite2D" parent="Body"]
sprite_frames = SubResource("SpriteFrames_ofgof")
frame = 2

[node name="Eyes" type="AnimatedSprite2D" parent="Body"]
sprite_frames = SubResource("SpriteFrames_s2xa2")
frame = 2

[node name="HeldPlantPivot" type="Marker2D" parent="Body"]
position = Vector2(0, -30)

[node name="HeldPlant" type="AnimatedSprite2D" parent="Body/HeldPlantPivot"]
sprite_frames = SubResource("SpriteFrames_a4k3i")
script = ExtResource("6_j3u13")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gkr3p")
}
autoplay = "Idle"

[node name="IFrameAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_titcc")
}

[node name="HPController" type="Node2D" parent="."]
script = ExtResource("5_4icno")

[node name="Hurtbox" type="Area2D" parent="HPController"]
collision_layer = 8
collision_mask = 0
script = ExtResource("6_kjd3u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HPController/Hurtbox" groups=["player_hurtbox"]]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_5ckf5")
debug_color = Color(0.956863, 0.192157, 0.188235, 0.419608)

[node name="PlantDetector" type="Area2D" parent="."]
position = Vector2(0, -7)
collision_layer = 0
collision_mask = 2
script = ExtResource("3_2jppj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PlantDetector"]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_mgmd7")
autoplay = "default"
frame_progress = 0.547924

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlantDetector"]
position = Vector2(0, 7)
shape = SubResource("CircleShape2D_vxn4d")
debug_color = Color(0.243137, 0.627451, 0.294118, 0.419608)

[node name="DepositDetector" type="Area2D" parent="."]
position = Vector2(0, -16)
collision_layer = 0
collision_mask = 4
script = ExtResource("5_cfsoy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DepositDetector"]
rotation = 1.5708
shape = SubResource("CircleShape2D_hfjxq")
debug_color = Color(0.839216, 0.188235, 0.823529, 0.419608)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false
follow_viewport_enabled = true

[node name="HUD" parent="." instance=ExtResource("10_5beym")]
visible = false
offset_left = -48.0
offset_top = -22.0
offset_right = -48.0
offset_bottom = -22.0

[connection signal="animation_finished" from="IFrameAnimation" to="." method="_on_i_frame_animation_animation_finished"]
[connection signal="hp_depleted" from="HPController" to="." method="_on_hp_controller_hp_depleted"]
[connection signal="hp_lost" from="HPController" to="." method="_on_hp_controller_hp_lost"]
[connection signal="attack_detected" from="HPController/Hurtbox" to="HPController" method="_on_hurtbox_attack_detected"]
[connection signal="area_entered" from="PlantDetector" to="PlantDetector" method="_on_area_entered"]
[connection signal="area_exited" from="PlantDetector" to="PlantDetector" method="_on_area_exited"]
[connection signal="area_entered" from="DepositDetector" to="DepositDetector" method="_on_area_entered"]
[connection signal="area_exited" from="DepositDetector" to="DepositDetector" method="_on_area_exited"]
